# BLE_I2C_FFF8

./: README.md
iOS/: .gitignore
iOS/BLE_FFF8/BLE_FFF8/: BLECentral.swift  BLEConfigViewModel.swift  BLEManager.swift  BLEStream.swift  BLEView.swift  BLEViewModel.swift  BLE_FFF8App.swift  ContentView.swift  GraphView.swift  MainView.swift  SettingsView.swift  UVDatabase.swift  UVViewModel.swift
iOS/BLE_FFF8/BLE_FFF8.xcodeproj/: project.pbxproj
nRF53FW/: .gitignore  CMakeLists.txt  README.md  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
nRF53FW/src/: main.c  settings.c  settings.h
